<resources>
    <string name="app_name">Geofencing</string>
    <string name="only_admin_can_login">"Only Admin can login "</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_login">User Login</string>
    <string name="new_user">New User ?</string>
    <string name="signup">Signup</string>
    <string name="admin_login">Admin Login</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="appointmentlocation">AppointmentLocation:</string>
    <string name="name">Name:</string>
    <string name="userlocation">UserLocation:</string>
    <string name="status">Status:</string>
    <string name="changestatus">ChangeStatus</string>
    <string name="krishna1397">Krishna1397</string>
    <string name="signout">SignOut</string>
    <string name="register_screen"> Register Screen</string>
    <string name="login_screen">"  Login Screen"</string>
    <string name="appointments">Appointments</string>
    <string name="users">Users</string>
    <string name="admin_login_screen">Login Screen</string>
    <string name="admin_email">krishna@admin.com</string>
    <string name="name_label">Name: %1$s</string>
    <string name="appointment_location_label">AppointmentLocation: %1$s</string>
    <string name="status_label">Status: %1$s</string>
    <string name="current_location_label">CurrentLocation: %1$s</string>

</resources>